Fix logic for converting between RGB and raw values in np arrays in analysis2.1

--- a/analysis2.4.ipynb
+++ b/analysis2.4.ipynb
@@ -13,20 +13,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a910b33c-ca35-4b01-9c4f-418548c0b8a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Next steps: \n",
-    "# 1. Figure out the dimensions of the returned FFT objects, why do they match original dimensions if they do?\n",
-    "# 2. Are the frequencies already arranged in order of magnitude? Try to compare the magnitudes. \n",
-    "# --- And how should we compare the magnitudes, by real part or by absolute value?\n",
-    "# 3. \n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "id": "d23441a2-ead8-438e-8467-bd2da8915910",
    "metadata": {},
@@ -401,6 +387,44 @@
     "        \n",
     "# df.to_pickle(\"analysis2.4.pkl\")\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a910b33c-ca35-4b01-9c4f-418548c0b8a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.04400788e-05, 3.04400788e-05, 3.83733431e-05, ...,\n",
+       "       3.69819583e+00, 3.69861713e+00, 3.69938675e+00])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Next steps: \n",
+    "# 1. Figure out the dimensions of the returned FFT objects, why do they match original dimensions if they do?\n",
+    "# 2. Are the frequencies already arranged in order of magnitude? Try to compare the magnitudes. \n",
+    "# --- And how should we compare the magnitudes, by real part or by absolute value?\n",
+    "\n",
+    "phi = np.load(\"Phi_201snap.npy\")\n",
+    "df = pd.DataFrame(index=np.arange(201))\n",
+    "\n",
+    "# Define values for k\n",
+    "k_values = [1, 2, 5, 10, 20, 50, 75, 100]\n",
+    "\n",
+    "data = phi[:,:,160]\n",
+    "\n",
+    "# Compute 1D (in r) and 2D FFT's\n",
+    "fft = np.fft.fft(data, axis=0)\n",
+    "fft_sorted = np.sort(np.abs(fft.reshape(-1)))\n",
+    "fft_sorted"
    ]
   },
   {
