--- a/analysis2.1.ipynb
+++ b/analysis2.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7ecb1932-a586-49bc-8b61-c3a1e0b84438",
    "metadata": {},
    "outputs": [],
@@ -16,217 +16,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "e6d71c22-18d7-4cba-92d2-2b2714232aef",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CR2.1.95</th>\n",
-       "      <th>RMSE2.1.95</th>\n",
-       "      <th>CR2.1.75</th>\n",
-       "      <th>RMSE2.1.75</th>\n",
-       "      <th>CR2.1.50</th>\n",
-       "      <th>RMSE2.1.50</th>\n",
-       "      <th>CR2.1.25</th>\n",
-       "      <th>RMSE2.1.25</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2.225199</td>\n",
-       "      <td>8.373892e-11</td>\n",
-       "      <td>4.148863</td>\n",
-       "      <td>8.895564e-11</td>\n",
-       "      <td>5.226791</td>\n",
-       "      <td>1.028789e-10</td>\n",
-       "      <td>5.761676</td>\n",
-       "      <td>1.284781e-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2.238544</td>\n",
-       "      <td>5.115598e-11</td>\n",
-       "      <td>4.128169</td>\n",
-       "      <td>5.342171e-11</td>\n",
-       "      <td>5.130105</td>\n",
-       "      <td>6.188467e-11</td>\n",
-       "      <td>6.043299</td>\n",
-       "      <td>7.578772e-11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2.120685</td>\n",
-       "      <td>3.433669e-11</td>\n",
-       "      <td>3.985854</td>\n",
-       "      <td>3.721427e-11</td>\n",
-       "      <td>4.829196</td>\n",
-       "      <td>4.312023e-11</td>\n",
-       "      <td>5.577474</td>\n",
-       "      <td>5.715082e-11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2.046308</td>\n",
-       "      <td>3.145086e-11</td>\n",
-       "      <td>3.891004</td>\n",
-       "      <td>3.419594e-11</td>\n",
-       "      <td>4.719977</td>\n",
-       "      <td>3.806139e-11</td>\n",
-       "      <td>5.527383</td>\n",
-       "      <td>4.962122e-11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2.123727</td>\n",
-       "      <td>4.129872e-11</td>\n",
-       "      <td>3.999041</td>\n",
-       "      <td>4.510328e-11</td>\n",
-       "      <td>4.878363</td>\n",
-       "      <td>4.993383e-11</td>\n",
-       "      <td>5.725463</td>\n",
-       "      <td>6.466399e-11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>196</th>\n",
-       "      <td>1.858981</td>\n",
-       "      <td>9.084699e-03</td>\n",
-       "      <td>3.425889</td>\n",
-       "      <td>9.344500e-03</td>\n",
-       "      <td>4.147129</td>\n",
-       "      <td>9.825954e-03</td>\n",
-       "      <td>4.917730</td>\n",
-       "      <td>1.105730e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>197</th>\n",
-       "      <td>1.834242</td>\n",
-       "      <td>9.943461e-03</td>\n",
-       "      <td>3.333994</td>\n",
-       "      <td>1.028376e-02</td>\n",
-       "      <td>4.082524</td>\n",
-       "      <td>1.073754e-02</td>\n",
-       "      <td>4.792023</td>\n",
-       "      <td>1.185783e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>1.823351</td>\n",
-       "      <td>1.098971e-02</td>\n",
-       "      <td>3.298053</td>\n",
-       "      <td>1.137544e-02</td>\n",
-       "      <td>4.052761</td>\n",
-       "      <td>1.189028e-02</td>\n",
-       "      <td>4.685106</td>\n",
-       "      <td>1.353249e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199</th>\n",
-       "      <td>1.836679</td>\n",
-       "      <td>1.239460e-02</td>\n",
-       "      <td>3.361852</td>\n",
-       "      <td>1.263808e-02</td>\n",
-       "      <td>4.126004</td>\n",
-       "      <td>1.333398e-02</td>\n",
-       "      <td>4.781675</td>\n",
-       "      <td>1.488403e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>200</th>\n",
-       "      <td>1.865630</td>\n",
-       "      <td>1.392819e-02</td>\n",
-       "      <td>3.387097</td>\n",
-       "      <td>1.424251e-02</td>\n",
-       "      <td>4.080146</td>\n",
-       "      <td>1.511365e-02</td>\n",
-       "      <td>4.772727</td>\n",
-       "      <td>1.668053e-02</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>201 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     CR2.1.95    RMSE2.1.95  CR2.1.75    RMSE2.1.75  CR2.1.50    RMSE2.1.50  \\\n",
-       "0    2.225199  8.373892e-11  4.148863  8.895564e-11  5.226791  1.028789e-10   \n",
-       "1    2.238544  5.115598e-11  4.128169  5.342171e-11  5.130105  6.188467e-11   \n",
-       "2    2.120685  3.433669e-11  3.985854  3.721427e-11  4.829196  4.312023e-11   \n",
-       "3    2.046308  3.145086e-11  3.891004  3.419594e-11  4.719977  3.806139e-11   \n",
-       "4    2.123727  4.129872e-11  3.999041  4.510328e-11  4.878363  4.993383e-11   \n",
-       "..        ...           ...       ...           ...       ...           ...   \n",
-       "196  1.858981  9.084699e-03  3.425889  9.344500e-03  4.147129  9.825954e-03   \n",
-       "197  1.834242  9.943461e-03  3.333994  1.028376e-02  4.082524  1.073754e-02   \n",
-       "198  1.823351  1.098971e-02  3.298053  1.137544e-02  4.052761  1.189028e-02   \n",
-       "199  1.836679  1.239460e-02  3.361852  1.263808e-02  4.126004  1.333398e-02   \n",
-       "200  1.865630  1.392819e-02  3.387097  1.424251e-02  4.080146  1.511365e-02   \n",
-       "\n",
-       "     CR2.1.25    RMSE2.1.25  \n",
-       "0    5.761676  1.284781e-10  \n",
-       "1    6.043299  7.578772e-11  \n",
-       "2    5.577474  5.715082e-11  \n",
-       "3    5.527383  4.962122e-11  \n",
-       "4    5.725463  6.466399e-11  \n",
-       "..        ...           ...  \n",
-       "196  4.917730  1.105730e-02  \n",
-       "197  4.792023  1.185783e-02  \n",
-       "198  4.685106  1.353249e-02  \n",
-       "199  4.781675  1.488403e-02  \n",
-       "200  4.772727  1.668053e-02  \n",
-       "\n",
-       "[201 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load data and create dataframe\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
     "df = pd.DataFrame(index=np.arange(201))\n",
     "my_dpi = 192\n",
     "\n",
+    "# Create convert function to use to convert output_array RGB values back to raw values\n",
+    "phimax, phimin = np.max(phi), np.min(phi)\n",
+    "ratio = (phimax-phimin)/255\n",
+    "def convertRGBToRaw(x):\n",
+    "    return ratio*x + phimin\n",
+    "\n",
     "for i in range(201):\n",
     "    arr = phi[:,:,i]\n",
-    "\n",
-    "    # Create convert function to use to convert output_array back to raw values\n",
-    "    phimax, phimin = np.max(arr), np.min(arr)\n",
-    "    ratio = (phimax-phimin)/255\n",
-    "    def convertRGBToRaw(x):\n",
-    "        return ratio*x + phimin\n",
     "\n",
     "    # Plot image (raw automatically converted to grayscale)\n",
     "    plt.figure(figsize=(294/my_dpi, 165/my_dpi), dpi=my_dpi)\n",
