Complete initial implementation of analysis2.4

--- a/analysis2.1.ipynb
+++ b/analysis2.1.ipynb
@@ -16,10 +16,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e6d71c22-18d7-4cba-92d2-2b2714232aef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CR2.1.95</th>\n",
+       "      <th>RMSE2.1.95</th>\n",
+       "      <th>CR2.1.75</th>\n",
+       "      <th>RMSE2.1.75</th>\n",
+       "      <th>CR2.1.50</th>\n",
+       "      <th>RMSE2.1.50</th>\n",
+       "      <th>CR2.1.25</th>\n",
+       "      <th>RMSE2.1.25</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.225199</td>\n",
+       "      <td>0.454821</td>\n",
+       "      <td>4.148863</td>\n",
+       "      <td>0.454839</td>\n",
+       "      <td>5.226791</td>\n",
+       "      <td>0.454862</td>\n",
+       "      <td>5.761676</td>\n",
+       "      <td>0.454662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.238544</td>\n",
+       "      <td>0.317059</td>\n",
+       "      <td>4.128169</td>\n",
+       "      <td>0.317107</td>\n",
+       "      <td>5.130105</td>\n",
+       "      <td>0.317030</td>\n",
+       "      <td>6.043299</td>\n",
+       "      <td>0.317010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.120685</td>\n",
+       "      <td>0.460035</td>\n",
+       "      <td>3.985854</td>\n",
+       "      <td>0.459934</td>\n",
+       "      <td>4.829196</td>\n",
+       "      <td>0.460129</td>\n",
+       "      <td>5.577474</td>\n",
+       "      <td>0.459528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.046308</td>\n",
+       "      <td>0.530838</td>\n",
+       "      <td>3.891004</td>\n",
+       "      <td>0.531039</td>\n",
+       "      <td>4.719977</td>\n",
+       "      <td>0.530802</td>\n",
+       "      <td>5.527383</td>\n",
+       "      <td>0.531217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.123727</td>\n",
+       "      <td>0.342132</td>\n",
+       "      <td>3.999041</td>\n",
+       "      <td>0.342164</td>\n",
+       "      <td>4.878363</td>\n",
+       "      <td>0.342246</td>\n",
+       "      <td>5.725463</td>\n",
+       "      <td>0.341761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>1.858981</td>\n",
+       "      <td>0.141536</td>\n",
+       "      <td>3.425889</td>\n",
+       "      <td>0.141600</td>\n",
+       "      <td>4.147129</td>\n",
+       "      <td>0.141432</td>\n",
+       "      <td>4.917730</td>\n",
+       "      <td>0.141780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>1.834242</td>\n",
+       "      <td>0.133754</td>\n",
+       "      <td>3.333994</td>\n",
+       "      <td>0.133860</td>\n",
+       "      <td>4.082524</td>\n",
+       "      <td>0.133731</td>\n",
+       "      <td>4.792023</td>\n",
+       "      <td>0.134080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>1.823351</td>\n",
+       "      <td>0.085889</td>\n",
+       "      <td>3.298053</td>\n",
+       "      <td>0.085908</td>\n",
+       "      <td>4.052761</td>\n",
+       "      <td>0.086110</td>\n",
+       "      <td>4.685106</td>\n",
+       "      <td>0.085741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>1.836679</td>\n",
+       "      <td>0.070893</td>\n",
+       "      <td>3.361852</td>\n",
+       "      <td>0.070967</td>\n",
+       "      <td>4.126004</td>\n",
+       "      <td>0.070906</td>\n",
+       "      <td>4.781675</td>\n",
+       "      <td>0.071113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>1.865630</td>\n",
+       "      <td>0.015672</td>\n",
+       "      <td>3.387097</td>\n",
+       "      <td>0.015971</td>\n",
+       "      <td>4.080146</td>\n",
+       "      <td>0.016695</td>\n",
+       "      <td>4.772727</td>\n",
+       "      <td>0.018289</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>201 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     CR2.1.95  RMSE2.1.95  CR2.1.75  RMSE2.1.75  CR2.1.50  RMSE2.1.50  \\\n",
+       "0    2.225199    0.454821  4.148863    0.454839  5.226791    0.454862   \n",
+       "1    2.238544    0.317059  4.128169    0.317107  5.130105    0.317030   \n",
+       "2    2.120685    0.460035  3.985854    0.459934  4.829196    0.460129   \n",
+       "3    2.046308    0.530838  3.891004    0.531039  4.719977    0.530802   \n",
+       "4    2.123727    0.342132  3.999041    0.342164  4.878363    0.342246   \n",
+       "..        ...         ...       ...         ...       ...         ...   \n",
+       "196  1.858981    0.141536  3.425889    0.141600  4.147129    0.141432   \n",
+       "197  1.834242    0.133754  3.333994    0.133860  4.082524    0.133731   \n",
+       "198  1.823351    0.085889  3.298053    0.085908  4.052761    0.086110   \n",
+       "199  1.836679    0.070893  3.361852    0.070967  4.126004    0.070906   \n",
+       "200  1.865630    0.015672  3.387097    0.015971  4.080146    0.016695   \n",
+       "\n",
+       "     CR2.1.25  RMSE2.1.25  \n",
+       "0    5.761676    0.454662  \n",
+       "1    6.043299    0.317010  \n",
+       "2    5.577474    0.459528  \n",
+       "3    5.527383    0.531217  \n",
+       "4    5.725463    0.341761  \n",
+       "..        ...         ...  \n",
+       "196  4.917730    0.141780  \n",
+       "197  4.792023    0.134080  \n",
+       "198  4.685106    0.085741  \n",
+       "199  4.781675    0.071113  \n",
+       "200  4.772727    0.018289  \n",
+       "\n",
+       "[201 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load data and create dataframe\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
