--- a/analysis2.2.ipynb
+++ b/analysis2.2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "cb160bd1-3f11-4e00-b96d-912708061b0d",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "9b31bfd3-7a9d-4db3-881d-ea35e8e6ab74",
    "metadata": {},
    "outputs": [
@@ -56,57 +56,57 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2.731508</td>\n",
-       "      <td>7.585385e-11</td>\n",
+       "      <td>0.453644</td>\n",
        "      <td>5.593847</td>\n",
-       "      <td>8.196205e-11</td>\n",
+       "      <td>0.453540</td>\n",
        "      <td>7.014160</td>\n",
-       "      <td>9.203225e-11</td>\n",
+       "      <td>0.453204</td>\n",
        "      <td>7.897196</td>\n",
-       "      <td>1.158381e-10</td>\n",
+       "      <td>0.454432</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2.894597</td>\n",
-       "      <td>6.348276e-11</td>\n",
+       "      <td>0.316969</td>\n",
        "      <td>5.970850</td>\n",
-       "      <td>6.527043e-11</td>\n",
+       "      <td>0.316869</td>\n",
        "      <td>7.550304</td>\n",
-       "      <td>7.011253e-11</td>\n",
+       "      <td>0.316868</td>\n",
        "      <td>9.082420</td>\n",
-       "      <td>8.047773e-11</td>\n",
+       "      <td>0.317324</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2.682558</td>\n",
-       "      <td>4.413099e-11</td>\n",
+       "      <td>0.454805</td>\n",
        "      <td>5.481357</td>\n",
-       "      <td>4.644386e-11</td>\n",
+       "      <td>0.454845</td>\n",
        "      <td>6.973504</td>\n",
-       "      <td>5.150911e-11</td>\n",
+       "      <td>0.454646</td>\n",
        "      <td>8.468085</td>\n",
-       "      <td>6.141829e-11</td>\n",
+       "      <td>0.455200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2.804874</td>\n",
-       "      <td>4.497024e-11</td>\n",
+       "      <td>0.533241</td>\n",
        "      <td>5.962810</td>\n",
-       "      <td>4.618577e-11</td>\n",
+       "      <td>0.533309</td>\n",
        "      <td>7.452920</td>\n",
-       "      <td>4.917307e-11</td>\n",
+       "      <td>0.533359</td>\n",
        "      <td>9.146270</td>\n",
-       "      <td>5.908598e-11</td>\n",
+       "      <td>0.533505</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2.809298</td>\n",
-       "      <td>4.671715e-11</td>\n",
+       "      <td>0.340551</td>\n",
        "      <td>5.937298</td>\n",
-       "      <td>4.901204e-11</td>\n",
+       "      <td>0.340568</td>\n",
        "      <td>7.513292</td>\n",
-       "      <td>5.454943e-11</td>\n",
+       "      <td>0.340626</td>\n",
        "      <td>9.217260</td>\n",
-       "      <td>6.716423e-11</td>\n",
+       "      <td>0.340867</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -122,57 +122,57 @@
        "    <tr>\n",
        "      <th>196</th>\n",
        "      <td>2.911860</td>\n",
-       "      <td>1.010413e-02</td>\n",
+       "      <td>0.141710</td>\n",
        "      <td>5.910355</td>\n",
-       "      <td>1.034624e-02</td>\n",
+       "      <td>0.141837</td>\n",
        "      <td>7.215094</td>\n",
-       "      <td>1.088751e-02</td>\n",
+       "      <td>0.141665</td>\n",
        "      <td>8.588433</td>\n",
-       "      <td>1.229336e-02</td>\n",
+       "      <td>0.141244</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
        "      <td>2.918494</td>\n",
-       "      <td>1.104861e-02</td>\n",
+       "      <td>0.133904</td>\n",
        "      <td>5.838121</td>\n",
-       "      <td>1.133318e-02</td>\n",
+       "      <td>0.133890</td>\n",
        "      <td>7.178520</td>\n",
-       "      <td>1.191273e-02</td>\n",
+       "      <td>0.134213</td>\n",
        "      <td>8.496610</td>\n",
-       "      <td>1.381746e-02</td>\n",
+       "      <td>0.133553</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198</th>\n",
        "      <td>2.824143</td>\n",
-       "      <td>1.225585e-02</td>\n",
+       "      <td>0.086159</td>\n",
        "      <td>5.736336</td>\n",
-       "      <td>1.258253e-02</td>\n",
+       "      <td>0.086290</td>\n",
        "      <td>7.013176</td>\n",
-       "      <td>1.325182e-02</td>\n",
+       "      <td>0.086387</td>\n",
        "      <td>8.396056</td>\n",
-       "      <td>1.499607e-02</td>\n",
+       "      <td>0.086236</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199</th>\n",
        "      <td>2.814121</td>\n",
-       "      <td>1.367826e-02</td>\n",
+       "      <td>0.071590</td>\n",
        "      <td>5.766874</td>\n",
-       "      <td>1.402025e-02</td>\n",
+       "      <td>0.071491</td>\n",
        "      <td>7.076154</td>\n",
-       "      <td>1.475587e-02</td>\n",
+       "      <td>0.072086</td>\n",
        "      <td>8.418460</td>\n",
-       "      <td>1.659224e-02</td>\n",
+       "      <td>0.072248</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>200</th>\n",
        "      <td>2.864135</td>\n",
-       "      <td>1.542675e-02</td>\n",
+       "      <td>0.016661</td>\n",
        "      <td>5.743463</td>\n",
-       "      <td>1.575256e-02</td>\n",
+       "      <td>0.016984</td>\n",
        "      <td>6.994462</td>\n",
-       "      <td>1.662453e-02</td>\n",
+       "      <td>0.017753</td>\n",
        "      <td>8.420556</td>\n",
-       "      <td>1.910551e-02</td>\n",
+       "      <td>0.020298</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -180,36 +180,36 @@
        "</div>"
       ],
       "text/plain": [
-       "     CR2.2.95    RMSE2.2.95  CR2.2.75    RMSE2.2.75  CR2.2.50    RMSE2.2.50  \\\n",
-       "0    2.731508  7.585385e-11  5.593847  8.196205e-11  7.014160  9.203225e-11   \n",
-       "1    2.894597  6.348276e-11  5.970850  6.527043e-11  7.550304  7.011253e-11   \n",
-       "2    2.682558  4.413099e-11  5.481357  4.644386e-11  6.973504  5.150911e-11   \n",
-       "3    2.804874  4.497024e-11  5.962810  4.618577e-11  7.452920  4.917307e-11   \n",
-       "4    2.809298  4.671715e-11  5.937298  4.901204e-11  7.513292  5.454943e-11   \n",
-       "..        ...           ...       ...           ...       ...           ...   \n",
-       "196  2.911860  1.010413e-02  5.910355  1.034624e-02  7.215094  1.088751e-02   \n",
-       "197  2.918494  1.104861e-02  5.838121  1.133318e-02  7.178520  1.191273e-02   \n",
-       "198  2.824143  1.225585e-02  5.736336  1.258253e-02  7.013176  1.325182e-02   \n",
-       "199  2.814121  1.367826e-02  5.766874  1.402025e-02  7.076154  1.475587e-02   \n",
-       "200  2.864135  1.542675e-02  5.743463  1.575256e-02  6.994462  1.662453e-02   \n",
+       "     CR2.2.95  RMSE2.2.95  CR2.2.75  RMSE2.2.75  CR2.2.50  RMSE2.2.50  \\\n",
+       "0    2.731508    0.453644  5.593847    0.453540  7.014160    0.453204   \n",
+       "1    2.894597    0.316969  5.970850    0.316869  7.550304    0.316868   \n",
+       "2    2.682558    0.454805  5.481357    0.454845  6.973504    0.454646   \n",
+       "3    2.804874    0.533241  5.962810    0.533309  7.452920    0.533359   \n",
+       "4    2.809298    0.340551  5.937298    0.340568  7.513292    0.340626   \n",
+       "..        ...         ...       ...         ...       ...         ...   \n",
+       "196  2.911860    0.141710  5.910355    0.141837  7.215094    0.141665   \n",
+       "197  2.918494    0.133904  5.838121    0.133890  7.178520    0.134213   \n",
+       "198  2.824143    0.086159  5.736336    0.086290  7.013176    0.086387   \n",
+       "199  2.814121    0.071590  5.766874    0.071491  7.076154    0.072086   \n",
+       "200  2.864135    0.016661  5.743463    0.016984  6.994462    0.017753   \n",
        "\n",
-       "     CR2.2.25    RMSE2.2.25  \n",
-       "0    7.897196  1.158381e-10  \n",
-       "1    9.082420  8.047773e-11  \n",
-       "2    8.468085  6.141829e-11  \n",
-       "3    9.146270  5.908598e-11  \n",
-       "4    9.217260  6.716423e-11  \n",
-       "..        ...           ...  \n",
-       "196  8.588433  1.229336e-02  \n",
-       "197  8.496610  1.381746e-02  \n",
-       "198  8.396056  1.499607e-02  \n",
-       "199  8.418460  1.659224e-02  \n",
-       "200  8.420556  1.910551e-02  \n",
+       "     CR2.2.25  RMSE2.2.25  \n",
+       "0    7.897196    0.454432  \n",
+       "1    9.082420    0.317324  \n",
+       "2    8.468085    0.455200  \n",
+       "3    9.146270    0.533505  \n",
+       "4    9.217260    0.340867  \n",
+       "..        ...         ...  \n",
+       "196  8.588433    0.141244  \n",
+       "197  8.496610    0.133553  \n",
+       "198  8.396056    0.086236  \n",
+       "199  8.418460    0.072248  \n",
+       "200  8.420556    0.020298  \n",
        "\n",
        "[201 rows x 8 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,18 +234,18 @@
     "\n",
     "points = np.array([x.flatten(), y.flatten()]).T\n",
     "\n",
+    "# Create convert function to use to convert im_array (203x203) back to raw values\n",
+    "phimax, phimin = np.max(phi), np.min(phi)\n",
+    "ratio = (phimax-phimin)/255\n",
+    "def convertRGBToRaw(x):\n",
+    "    return ratio*x + phimin\n",
+    "\n",
     "for i in range(201):\n",
     "    arr = phi[:,:,i]\n",
     "    values = arr.flatten()\n",
     "    \n",
     "    # Interpolate the data to the Cartesian grid\n",
     "    grid_z = griddata(points, values, (grid_x, grid_y), method='nearest')\n",
-    "\n",
-    "    # Create convert function to use to convert im_array (203x203) back to raw values\n",
-    "    phimax, phimin = np.max(grid_z), np.min(grid_z)\n",
-    "    ratio = (phimax-phimin)/255\n",
-    "    def convertRGBToRaw(x):\n",
-    "        return ratio*x + phimin\n",
     "\n",
     "    # Plot image (raw automatically converted to grayscale), save as PNG\n",
     "    plt.figure(figsize=(264/my_dpi, 264/my_dpi), dpi=my_dpi)\n",
