Add analysis2.4 to combined analysis

--- a/analysis2.4.ipynb
+++ b/analysis2.4.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "d23441a2-ead8-438e-8467-bd2da8915910",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
        "[1 rows x 32 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
     "    df.at[0, cr_string2D] = cr2D\n",
     "    df.at[0, rmse_string2D] = rmse2D\n",
     "        \n",
-    "# df.to_pickle(\"analysis2.4.pkl\")\n",
+    "df.to_pickle(\"analysis2.4.pkl\")\n",
     "df"
    ]
   },
@@ -264,17 +264,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "320377cf-8ff6-45dd-96fe-201e97a7bfff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(101, 227, 201)"
+       "(0.0874927591521311, -0.10247897730776556, 10.50902376505896, -0.896078)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
     "# # df.to_pickle(\"analysis2.4.pkl\")\n",
     "# df\n",
     "\n",
-    "phi.shape"
+    "max2D, min2D, max1D, min1D"
    ]
   },
   {
