Add in alternative method to analysis2.4, add in all new graph stuff to combined analysis

--- a/analysis2.3.ipynb
+++ b/analysis2.3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "40c5b294-5219-4620-a954-f45a078c036c",
    "metadata": {},
    "outputs": [],
@@ -105,22 +105,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "b88fa6b9-4db5-4398-be6b-3a0c416e41e9",
+   "execution_count": null,
+   "id": "2086a5a9-fcd8-4081-bae6-da4fe2c947b6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "y = np.float64(phi)\n",
-    "z = np.float32(phi)\n",
-    "print(np.array_equal(phi, y), np.array_equal(phi, z))"
+    "# Checking algorithm using random array instead of phi\n",
+    "\n"
    ]
   },
   {
@@ -146,8 +137,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b16c37b4-8624-4b50-a05c-55a76d1c6e57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float32')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.float32(phi).dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae94c632-d031-4b29-aaf9-852d285b4ca3",
    "metadata": {},
    "outputs": [],
    "source": []
