--- a/analysis2.4.ipynb
+++ b/analysis2.4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9b491d61-c4b6-4039-88b8-eb13c342b923",
    "metadata": {},
    "outputs": [],
@@ -16,20 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "519be52c-2075-4bc0-a5f7-953825459b9f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Same thing as below, but doing FFT's on entire 3d array as opposed to looping (to see if they're the same, and\n",
-    "# I'm hypothesizing that they should be) --> Not the same because sorting the list and removing the values is different\n",
-    "\n",
-    "# You'd have to create a (101x227, 201) array after reshaping phi, so either way have to iterate over 201 images"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "d23441a2-ead8-438e-8467-bd2da8915910",
    "metadata": {},
    "outputs": [
@@ -123,12 +110,14 @@
        "[1 rows x 32 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Ranking FFT frequencies based on absolute value (sqrt(a^2+b^2))\n",
+    "\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
     "df = pd.DataFrame()\n",
     "\n",
@@ -173,6 +162,190 @@
     "        # Take the top k frequencies from fft_sorted by defining threshold & mask smaller values\n",
     "        threshold2 = fft2_sorted[k]\n",
     "        mask2 = np.abs(fft2)>threshold2\n",
+    "        masked2 = fft2 * mask2\n",
+    "        \n",
+    "        # Reconstruct the data from masked2 using inverse FFT2\n",
+    "        newdata2 = np.fft.ifft2(masked2).real\n",
+    "        \n",
+    "        # Add squared differences to total sum, update min/max values for later\n",
+    "        diff2D = data - newdata2\n",
+    "        sum_of_squares2D += np.sum(diff2D**2)\n",
+    "        if np.max(diff2D) > max2D:\n",
+    "            max2D = np.max(diff2D)\n",
+    "        if np.min(diff2D) < min2D:\n",
+    "            min2D = np.min(diff2D)\n",
+    "\n",
+    "    # Compute RMSE's and CR's of 1D and 2D cases, add to dataframe\n",
+    "    range1D = max1D - min1D\n",
+    "    rms1D = np.sqrt(sum_of_squares1D / (101*227*201))\n",
+    "    rmse1D = rms1D / (100*range1D)\n",
+    "    cr1D = 101 / k\n",
+    "    cr_string1D = \"CR1D_k=\" + str(k)\n",
+    "    rmse_string1D = \"RMSE1D_k=\" + str(k)\n",
+    "    df.at[0, cr_string1D] = cr1D\n",
+    "    df.at[0, rmse_string1D] = rmse1D\n",
+    "\n",
+    "    range2D = max2D - min2D\n",
+    "    rms2D = np.sqrt(sum_of_squares2D / (101*227*201))\n",
+    "    rmse2D = rms2D / (100*range2D)\n",
+    "    cr2D = (101*227) / k\n",
+    "    cr_string2D = \"CR2D_k=\" + str(k)\n",
+    "    rmse_string2D = \"RMSE2D_k=\" + str(k)\n",
+    "    df.at[0, cr_string2D] = cr2D\n",
+    "    df.at[0, rmse_string2D] = rmse2D\n",
+    "        \n",
+    "df.to_pickle(\"analysis2.4.pkl\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fbaea077-50d2-4704-aef0-9fcf942ed276",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CR1D_k=1</th>\n",
+       "      <th>RMSE1D_k=1</th>\n",
+       "      <th>CR2D_k=1</th>\n",
+       "      <th>RMSE2D_k=1</th>\n",
+       "      <th>CR1D_k=2</th>\n",
+       "      <th>RMSE1D_k=2</th>\n",
+       "      <th>CR2D_k=2</th>\n",
+       "      <th>RMSE2D_k=2</th>\n",
+       "      <th>CR1D_k=5</th>\n",
+       "      <th>RMSE1D_k=5</th>\n",
+       "      <th>...</th>\n",
+       "      <th>CR2D_k=50</th>\n",
+       "      <th>RMSE2D_k=50</th>\n",
+       "      <th>CR1D_k=75</th>\n",
+       "      <th>RMSE1D_k=75</th>\n",
+       "      <th>CR2D_k=75</th>\n",
+       "      <th>RMSE2D_k=75</th>\n",
+       "      <th>CR1D_k=100</th>\n",
+       "      <th>RMSE1D_k=100</th>\n",
+       "      <th>CR2D_k=100</th>\n",
+       "      <th>RMSE2D_k=100</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>101.0</td>\n",
+       "      <td>0.000291</td>\n",
+       "      <td>22927.0</td>\n",
+       "      <td>0.000262</td>\n",
+       "      <td>50.5</td>\n",
+       "      <td>0.000291</td>\n",
+       "      <td>11463.5</td>\n",
+       "      <td>0.000265</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>0.00028</td>\n",
+       "      <td>...</td>\n",
+       "      <td>458.54</td>\n",
+       "      <td>0.000288</td>\n",
+       "      <td>1.346667</td>\n",
+       "      <td>0.000041</td>\n",
+       "      <td>305.693333</td>\n",
+       "      <td>0.000285</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>0.000034</td>\n",
+       "      <td>229.27</td>\n",
+       "      <td>0.000252</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 32 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CR1D_k=1  RMSE1D_k=1  CR2D_k=1  RMSE2D_k=1  CR1D_k=2  RMSE1D_k=2  CR2D_k=2  \\\n",
+       "0     101.0    0.000291   22927.0    0.000262      50.5    0.000291   11463.5   \n",
+       "\n",
+       "   RMSE2D_k=2  CR1D_k=5  RMSE1D_k=5  ...  CR2D_k=50  RMSE2D_k=50  CR1D_k=75  \\\n",
+       "0    0.000265      20.2     0.00028  ...     458.54     0.000288   1.346667   \n",
+       "\n",
+       "   RMSE1D_k=75   CR2D_k=75  RMSE2D_k=75  CR1D_k=100  RMSE1D_k=100  CR2D_k=100  \\\n",
+       "0     0.000041  305.693333     0.000285        1.01      0.000034      229.27   \n",
+       "\n",
+       "   RMSE2D_k=100  \n",
+       "0      0.000252  \n",
+       "\n",
+       "[1 rows x 32 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ranking frequencies based on absolute value of real part\n",
+    "\n",
+    "phi = np.load(\"Phi_201snap.npy\")\n",
+    "df = pd.DataFrame()\n",
+    "\n",
+    "# Define values for k\n",
+    "k_values = [1, 2, 5, 10, 20, 50, 75, 100]\n",
+    "\n",
+    "for k in k_values:\n",
+    "    sum_of_squares1D, sum_of_squares2D = 0, 0\n",
+    "    max1D, min1D, max2D, min2D = -1000, 1000, -1000, 1000\n",
+    "    \n",
+    "    for i in range(201):\n",
+    "        data = phi[:,:,i]\n",
+    "\n",
+    "        # Compute 1D (in r) and 2D FFT's\n",
+    "        fft = np.fft.fft(data, axis=0)\n",
+    "        fft2 = np.fft.fft2(data)\n",
+    "\n",
+    "        # 1D\n",
+    "        # Sort fft by absolute value of real part in descending order\n",
+    "        fft_sorted = np.sort(np.abs(np.real(fft.reshape(-1))))[::-1]\n",
+    "        \n",
+    "        # Take the top k frequencies from fft_sorted by defining threshold & mask smaller values\n",
+    "        threshold = fft_sorted[k]\n",
+    "        mask = np.abs(np.real(fft))>threshold\n",
+    "        masked = fft * mask\n",
+    "\n",
+    "        # Reconstruct the data from masked using inverse FFT\n",
+    "        newdata = np.fft.ifft(masked).real\n",
+    "        \n",
+    "        # Add squared differences to total sum, update min/max values for later\n",
+    "        diff1D = data - newdata\n",
+    "        sum_of_squares1D += np.sum(diff1D**2)\n",
+    "        if np.max(diff1D) > max1D:\n",
+    "            max1D = np.max(diff1D)\n",
+    "        if np.min(diff1D) < min1D:\n",
+    "            min1D = np.min(diff1D)\n",
+    "\n",
+    "        # 2D\n",
+    "        # Sort fft by absolute value of real part in descending order\n",
+    "        fft2_sorted = np.sort(np.abs(np.real(fft2.reshape(-1))))[::-1]\n",
+    "\n",
+    "        # Take the top k frequencies from fft_sorted by defining threshold & mask smaller values\n",
+    "        threshold2 = fft2_sorted[k]\n",
+    "        mask2 = np.abs(np.real(fft2))>threshold2\n",
     "        masked2 = fft2 * mask2\n",
     "        \n",
     "        # Reconstruct the data from masked2 using inverse FFT2\n",
@@ -264,17 +437,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "320377cf-8ff6-45dd-96fe-201e97a7bfff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.0874927591521311, -0.10247897730776556, 10.50902376505896, -0.896078)"
+       "33.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,35 +507,13 @@
     "        \n",
     "# # df.to_pickle(\"analysis2.4.pkl\")\n",
     "# df\n",
-    "\n",
-    "max2D, min2D, max1D, min1D"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "a26bfcfa-f3fe-4fd2-bcbd-bf46a665fc7b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "5 * True"
+    "np.abs(np.real(-33+4j))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7b6a470-9320-406c-bd01-3c08051c4503",
+   "id": "434235b1-3608-409b-982e-c6f1fad37339",
    "metadata": {},
    "outputs": [],
    "source": []
