Check analysis2.3 algorithm using random arrays with values between 0 and 1

--- a/analysis2.3.ipynb
+++ b/analysis2.3.ipynb
@@ -105,61 +105,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "2086a5a9-fcd8-4081-bae6-da4fe2c947b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0021822115114473097\n",
+      "0.002183133083971618\n",
+      "0.386857\n",
+      "-0.896078\n"
+     ]
+    }
+   ],
    "source": [
     "# Checking algorithm using random array instead of phi\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "9efd3c48-03bd-4656-a513-099ed716a70a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('float64')"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum_of_squares16.dtype"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "b16c37b4-8624-4b50-a05c-55a76d1c6e57",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('float32')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.float32(phi).dtype"
+    "\n",
+    "data = np.random.rand(101,227,201)\n",
+    "df1 = pd.DataFrame()\n",
+    "\n",
+    "diff32 = data - np.float32(data)\n",
+    "sum_of_squares32 = np.sum(diff32**2)\n",
+    "range32 = np.max(diff32) - np.min(diff32)\n",
+    "rms32 = (sum_of_squares32/(101*227*201))**0.5\n",
+    "rmse32 = rms32/(100*range32)\n",
+    "\n",
+    "diff16 = data - np.float16(data)\n",
+    "sum_of_squares16 = np.sum(diff16**2)\n",
+    "range16 = np.max(diff16) - np.min(diff16)\n",
+    "rms16 = (sum_of_squares16/(101*227*201))**0.5\n",
+    "rmse16 = rms16/(100*range16)\n",
+    "\n",
+    "print(rmse32)\n",
+    "print(rmse16)\n",
+    "print(np.max(phi))\n",
+    "print(np.min(phi))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae94c632-d031-4b29-aaf9-852d285b4ca3",
+   "id": "dfe8267c-d7c1-410a-aa4c-4e0df9d3cab0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17771304-f03d-4781-b60b-fb651eef3f2a",
    "metadata": {},
    "outputs": [],
    "source": []
